{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 10,
  "lineage": "f85ef6c6-1f82-9b9b-6ca6-22180af466b6",
  "resources": [
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "TestRouteIP",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/16",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-route-table-test/providers/Microsoft.Network/routeTables/rt/routes/TestRouteIP",
            "name": "TestRouteIP",
            "next_hop_in_ip_address": "10.0.0.10",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "dtf-route-table-test",
            "route_table_name": "rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_rg",
            "module.route_table.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "TestRouteInternet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "11.0.0.0/16",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-route-table-test/providers/Microsoft.Network/routeTables/rt/routes/TestRouteInternet",
            "name": "TestRouteInternet",
            "next_hop_in_ip_address": "",
            "next_hop_type": "Internet",
            "resource_group_name": "dtf-route-table-test",
            "route_table_name": "rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_rg",
            "module.route_table.azurerm_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-route-table-test/providers/Microsoft.Network/routeTables/rt",
            "location": "westeurope",
            "name": "rt",
            "resource_group_name": "dtf-route-table-test",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "TestRouteIP",
                "next_hop_in_ip_address": "10.0.0.10",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "11.0.0.0/16",
                "name": "TestRouteInternet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [],
            "tags": {
              "CreationDateTime": "2023-07-26T12:27:56.8576382Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_rg"
          ]
        }
      ]
    }
  ]
}